# whatami

./: .gitignore  CMakeLists.txt  main.cpp  windows_edition.cpp  windows_edition.h
.github/workflows/: cmake-single-platform.yml
